@@ -1,1 +1,1 @@
-max v2;#N vpatcher 3 47 870 744;#P newex 53 423 35 196617 vasp.f;#P newex 324 415 45 196617 loadbang;#P message 56 315 53 196617 vasp buf3;#N vpatcher 284 239 684 539;#P newex 36 128 43 196617 * 1000;#P newex 36 102 27 196617 int;#P newex 36 76 42 196617 / 1000;#P outlet 36 217 15 0;#P inlet 36 48 15 0;#P connect 0 0 2 0;#P connect 2 0 3 0;#P connect 3 0 4 0;#P connect 4 0 1 0;#P pop;#P newobj 105 268 38 196617 p rnd;#P message 794 105 52 196617 0 -1 0 -1;#P message 798 253 52 196617 0 -1 0 -1;#P message 541 47 34 196617 write;#N vpatcher 385 272 785 572;#P outlet 29 147 15 0;#P inlet 90 40 15 0;#P inlet 29 42 15 0;#P newex 28 108 35 196617 vasp.f;#P newex 28 71 38 196617 vasp.s;#P connect 2 0 0 0;#P connect 0 0 1 0;#P connect 1 0 4 0;#P connect 3 0 1 1;#P connect 3 0 0 1;#P pop;#P newobj 70 369 25 196617 p sf;#N vpatcher 385 272 785 572;#P outlet 29 147 15 0;#P inlet 90 40 15 0;#P inlet 29 42 15 0;#P newex 28 108 35 196617 vasp.f;#P newex 28 71 38 196617 vasp.s;#P connect 2 0 0 0;#P connect 0 0 1 0;#P connect 1 0 4 0;#P connect 3 0 1 1;#P connect 3 0 0 1;#P pop;#P newobj 149 316 25 196617 p sf;#P newex 149 226 30 196617 vasp;#P flonum 600 411 73 9 0 0 0 3 0 0 0 221 221 221 222 222 222 0 0 0;#P flonum 495 411 73 9 0 0 0 3 0 0 0 221 221 221 222 222 222 0 0 0;#P button 166 95 15 0;#P flonum 600 251 73 9 0 0 0 3 0 0 0 221 221 221 222 222 222 0 0 0;#P flonum 495 251 73 9 0 0 0 3 0 0 0 221 221 221 222 222 222 0 0 0;#P newex 88 214 27 196617 t b i;#P newex 88 189 43 196617 vasp.f?;#P button 51 101 15 0;#N vpatcher 658 452 1058 752;#P origin 0 167;#P newex 26 46 20 196617 t b;#P outlet 34 240 15 0;#P inlet 147 33 15 0;#P inlet 85 29 15 0;#P inlet 24 27 15 0;#P message 45 176 35 196617 set \$1;#P newex 45 211 76 196617 pack 0. 0.;#P newex 126 77 40 196617 * 44.099998;#P newex 45 89 40 196617 * 44.099998;#P newex 45 67 29 196617 !- 0.;#P connect 5 0 9 0;#P connect 3 0 8 0;#P connect 6 0 0 0;#P connect 0 0 1 0;#P connect 1 0 4 0;#P connect 4 0 3 0;#P fasten 9 0 3 0 31 202 50 202;#P connect 7 0 0 1;#P connect 2 0 3 1;#P connect 6 0 2 0;#P pop;#P newobj 37 147 41 196617 p sel;#N vpatcher 658 452 1058 752;#P origin 0 167;#P newex 26 46 20 196617 t b;#P outlet 34 183 15 0;#P inlet 147 33 15 0;#P inlet 85 29 15 0;#P inlet 24 27 15 0;#P message 45 114 35 196617 set \$1;#P newex 45 142 76 196617 pack 0. 0.;#P newex 133 93 40 196617 * 44.099998;#P newex 45 89 40 196617 * 44.099998;#P newex 45 67 29 196617 !- 0.;#P connect 5 0 9 0;#P connect 3 0 8 0;#P connect 6 0 0 0;#P connect 0 0 1 0;#P connect 1 0 4 0;#P fasten 9 0 3 0 31 133 50 133;#P connect 4 0 3 0;#P connect 7 0 0 1;#P connect 2 0 3 1;#P connect 6 0 2 0;#P pop;#P newobj 149 125 41 196617 p sel;#P user umenu 138 545 100 196647 1 64 561 1;#X add buf1;#X add buf2;#X add buf3;#P newex 138 564 60 196617 prepend set;#P user waveform~ 276 546 569 107 3 9;#W mode select;#W mouseoutput continuous;#W unit ms;#W grid 1000.;#W ticks 8.;#W labels 1;#W vlabels 0;#W vticks 1;#W vzoom 1.;#W voffset 0.;#W bpm 120. 4.;#W frgb 33 0 0;#W brgb 60 178 173;#W rgb2 0 95 255;#W rgb3 0 0 0;#W rgb4 0 0 0;#W rgb5 190 137 255;#W rgb6 100 100 100;#W rgb7 100 100 100;#P newex 149 171 35 196617 vasp.n;#P newex 37 206 35 196617 vasp.n;#P toggle 130 57 15 0;#P newex 56 338 38 196617 vasp.n;#P newex 53 467 45 196617 vasp.opt;#P newex 53 445 54 196617 vasp.conv;#P newex 53 511 31 196617 print;#P newex 53 490 38 196617 vasp.u;#P user waveform~ 276 436 569 107 3 9;#W mode select;#W mouseoutput continuous;#W unit ms;#W grid 1000.;#W ticks 8.;#W labels 1;#W vlabels 0;#W vticks 1;#W vzoom 1.;#W voffset 0.;#W bpm 120. 4.;#W frgb 33 0 0;#W brgb 60 178 173;#W rgb2 0 95 255;#W rgb3 0 0 0;#W rgb4 0 0 0;#W rgb5 190 137 255;#W rgb6 100 100 100;#W rgb7 100 100 100;#P message 276 417 45 196617 set buf3;#P message 492 47 42 196617 replace;#P newex 490 68 81 196617 buffer~ buf3 10;#P newex 37 393 43 196617 vasp.->;#P message 149 150 82 196617 vasp \$1 buf2 \$2;#P button 38 36 42 0;#P message 37 169 83 196617 vasp \$1 buf1 \$2;#P message 30 590 27 196617 stop;#P message 375 48 42 196617 replace;#P newex 373 69 65 196617 buffer~ buf2;#P user waveform~ 277 272 572 133 3 9;#W mode select;#W mouseoutput continuous;#W unit samples;#W grid 44100.;#W ticks 8.;#W labels 1;#W vlabels 0;#W vticks 1;#W vzoom 1.;#W voffset 0.;#W bpm 120. 4.;#W frgb 33 0 0;#W brgb 60 178 173;#W rgb2 0 95 255;#W rgb3 0 0 0;#W rgb4 0 0 0;#W rgb5 190 137 255;#W rgb6 100 100 100;#W rgb7 100 100 100;#P message 277 253 45 196617 set buf2;#P message 31 572 60 196617 reset \, start;#P newex 94 573 35 196617 sig~ 1;#P user ezdac~ 70 642 114 675 0;#P newex 80 619 84 196617 xgroove~ 1 buf3;#P user waveform~ 277 123 570 121 3 9;#W mode select;#W mouseoutput continuous;#W unit ms;#W grid 1000.;#W ticks 8.;#W labels 1;#W vlabels 0;#W vticks 1;#W vzoom 1.;#W voffset 0.;#W bpm 120. 4.;#W frgb 33 0 0;#W brgb 60 178 173;#W rgb2 0 95 255;#W rgb3 0 0 0;#W rgb4 0 0 0;#W rgb5 190 137 255;#W rgb6 100 100 100;#W rgb7 100 100 100;#P message 277 104 45 196617 set buf1;#P message 278 48 42 196617 replace;#P newex 276 69 65 196617 buffer~ buf1;#P comment 147 57 100 196617 channel sel 0/1;#P newex 168 202 35 196617 vasp.!;#P connect 16 0 35 0;#P connect 36 0 35 0;#P connect 35 0 15 0;#P connect 15 0 29 0;#P connect 29 0 18 0;#P hidden connect 5 2 35 1;#P connect 18 1 53 0;#P connect 53 0 25 0;#P connect 25 0 26 0;#P connect 26 0 23 0;#P connect 23 0 24 0;#P fasten 38 0 51 0 93 258 61 258;#P connect 51 0 27 0;#P hidden connect 28 0 29 1;#P hidden connect 5 3 35 2;#P connect 27 0 46 0;#P connect 46 0 18 1;#P connect 6 0 7 0;#P fasten 50 0 53 1 110 409 83 409;#P connect 32 0 6 0;#P connect 9 0 6 0;#P connect 8 0 6 0;#P connect 14 0 6 0;#P hidden fasten 28 0 27 1 135 332 89 332;#P fasten 50 0 46 1 110 359 90 359;#P connect 15 0 37 0;#P connect 37 0 38 0;#P fasten 45 0 25 1 154 423 102 423;#P connect 38 1 50 0;#P connect 33 1 32 0;#P connect 41 0 34 0;#P connect 16 0 34 0;#P connect 34 0 17 0;#P connect 17 0 30 0;#P fasten 38 0 44 0 93 258 126 258 126 219 154 219;#P connect 44 0 45 0;#P hidden connect 11 2 34 1;#P fasten 50 0 45 1 110 300 169 300;#P connect 30 0 0 0;#P connect 0 0 44 1;#P hidden connect 28 0 30 1;#P hidden connect 11 3 34 2;#P connect 3 0 2 0;#P hidden connect 19 1 21 0;#P hidden connect 52 0 21 0;#P connect 21 0 22 0;#P hidden connect 2 1 4 0;#P connect 4 0 5 0;#P hidden connect 12 1 10 0;#P connect 10 0 11 0;#P connect 13 0 12 0;#P connect 47 0 19 0;#P connect 20 0 19 0;#P connect 5 2 39 0;#P connect 11 2 42 0;#P connect 5 3 40 0;#P connect 11 3 43 0;#P hidden connect 31 5 22 4;#P hidden connect 22 5 31 4;#P connect 49 0 5 4;#P pop;
+max v2;#N vpatcher 3 47 844 744;#P newex 151 447 59 196617 vasp.cconv;#P newex 53 423 35 196617 vasp.f;#P newex 632 52 45 196617 loadbang;#P message 56 315 53 196617 vasp buf3;#N vpatcher 284 239 684 539;#P newex 36 128 43 196617 * 1000;#P newex 36 102 27 196617 int;#P newex 36 76 42 196617 / 1000;#P outlet 36 217 15 0;#P inlet 36 48 15 0;#P connect 0 0 2 0;#P connect 2 0 3 0;#P connect 3 0 4 0;#P connect 4 0 1 0;#P pop;#P newobj 105 268 38 196617 p rnd;#P message 770 110 52 196617 0 -1 0 -1;#P message 774 258 52 196617 0 -1 0 -1;#P message 518 51 34 196617 write;#N vpatcher 385 272 785 572;#P outlet 29 147 15 0;#P inlet 90 40 15 0;#P inlet 29 42 15 0;#P newex 28 108 35 196617 vasp.f;#P newex 28 71 38 196617 vasp.s;#P connect 2 0 0 0;#P connect 0 0 1 0;#P connect 1 0 4 0;#P connect 3 0 1 1;#P connect 3 0 0 1;#P pop;#P newobj 70 369 25 196617 p sf;#N vpatcher 385 272 785 572;#P outlet 29 147 15 0;#P inlet 90 40 15 0;#P inlet 29 42 15 0;#P newex 28 108 35 196617 vasp.f;#P newex 28 71 38 196617 vasp.s;#P connect 2 0 0 0;#P connect 0 0 1 0;#P connect 1 0 4 0;#P connect 3 0 1 1;#P connect 3 0 0 1;#P pop;#P newobj 149 316 25 196617 p sf;#P newex 149 226 30 196617 vasp;#P flonum 577 415 73 9 0 0 0 3 0 0 0 221 221 221 222 222 222 0 0 0;#P flonum 472 415 73 9 0 0 0 3 0 0 0 221 221 221 222 222 222 0 0 0;#P button 166 95 15 0;#P flonum 577 255 73 9 0 0 0 3 0 0 0 221 221 221 222 222 222 0 0 0;#P flonum 472 255 73 9 0 0 0 3 0 0 0 221 221 221 222 222 222 0 0 0;#P newex 88 214 27 196617 t b i;#P newex 88 189 43 196617 vasp.f?;#P button 51 101 15 0;#N vpatcher 658 452 1058 752;#P origin 0 167;#P newex 26 46 20 196617 t b;#P outlet 34 240 15 0;#P inlet 147 33 15 0;#P inlet 85 29 15 0;#P inlet 24 27 15 0;#P message 45 176 35 196617 set \$1;#P newex 45 211 76 196617 pack 0. 0.;#P newex 126 77 40 196617 * 44.099998;#P newex 45 89 40 196617 * 44.099998;#P newex 45 67 29 196617 !- 0.;#P connect 5 0 9 0;#P connect 3 0 8 0;#P connect 6 0 0 0;#P connect 0 0 1 0;#P connect 1 0 4 0;#P connect 4 0 3 0;#P fasten 9 0 3 0 31 202 50 202;#P connect 7 0 0 1;#P connect 2 0 3 1;#P connect 6 0 2 0;#P pop;#P newobj 37 147 41 196617 p sel;#N vpatcher 658 452 1058 752;#P origin 0 167;#P newex 26 46 20 196617 t b;#P outlet 34 183 15 0;#P inlet 147 33 15 0;#P inlet 85 29 15 0;#P inlet 24 27 15 0;#P message 45 114 35 196617 set \$1;#P newex 45 142 76 196617 pack 0. 0.;#P newex 133 93 40 196617 * 44.099998;#P newex 45 89 40 196617 * 44.099998;#P newex 45 67 29 196617 !- 0.;#P connect 5 0 9 0;#P connect 3 0 8 0;#P connect 6 0 0 0;#P connect 0 0 1 0;#P connect 1 0 4 0;#P fasten 9 0 3 0 31 133 50 133;#P connect 4 0 3 0;#P connect 7 0 0 1;#P connect 2 0 3 1;#P connect 6 0 2 0;#P pop;#P newobj 149 125 41 196617 p sel;#P user umenu 138 545 100 196647 1 64 561 1;#X add buf1;#X add buf2;#X add buf3;#P newex 138 564 60 196617 prepend set;#P newex 149 171 35 196617 vasp.n;#P newex 37 206 35 196617 vasp.n;#P toggle 130 57 15 0;#P newex 56 338 38 196617 vasp.n;#P newex 53 467 45 196617 vasp.opt;#P newex 53 447 54 196617 vasp.conv;#P newex 53 511 31 196617 print;#P newex 53 490 38 196617 vasp.u;#P user waveform~ 253 440 569 107 3 9;#W mode select;#W mouseoutput continuous;#W unit samples;#W grid 44100.;#W ticks 8.;#W labels 1;#W vlabels 0;#W vticks 1;#W vzoom 1.;#W voffset 0.;#W bpm 120. 4.;#W frgb 33 0 0;#W brgb 60 178 173;#W rgb2 0 95 255;#W rgb3 0 0 0;#W rgb4 0 0 0;#W rgb5 190 137 255;#W rgb6 100 100 100;#W rgb7 100 100 100;#P message 253 421 45 196617 set buf3;#P message 469 51 42 196617 replace;#P newex 467 72 81 196617 buffer~ buf3 10;#P newex 37 393 43 196617 vasp.->;#P message 149 150 82 196617 vasp \$1 buf2 \$2;#P button 38 36 42 0;#P message 37 169 83 196617 vasp \$1 buf1 \$2;#P message 30 590 27 196617 stop;#P message 352 52 42 196617 replace;#P newex 350 73 81 196617 buffer~ buf2 10;#P user waveform~ 254 276 572 133 3 9;#W mode select;#W mouseoutput continuous;#W unit samples;#W grid 44100.;#W ticks 8.;#W labels 1;#W vlabels 0;#W vticks 1;#W vzoom 1.;#W voffset 0.;#W bpm 120. 4.;#W frgb 33 0 0;#W brgb 60 178 173;#W rgb2 0 95 255;#W rgb3 0 0 0;#W rgb4 0 0 0;#W rgb5 190 137 255;#W rgb6 100 100 100;#W rgb7 100 100 100;#P message 254 257 45 196617 set buf2;#P message 31 572 60 196617 reset \, start;#P newex 94 573 35 196617 sig~ 1;#P user ezdac~ 70 642 114 675 0;#P newex 80 619 84 196617 xgroove~ 1 buf3;#P user waveform~ 254 127 570 121 3 9;#W mode select;#W mouseoutput continuous;#W unit samples;#W grid 44100.;#W ticks 8.;#W labels 1;#W vlabels 0;#W vticks 1;#W vzoom 1.;#W voffset 0.;#W bpm 120. 4.;#W frgb 33 0 0;#W brgb 60 178 173;#W rgb2 0 95 255;#W rgb3 0 0 0;#W rgb4 0 0 0;#W rgb5 190 137 255;#W rgb6 100 100 100;#W rgb7 100 100 100;#P message 254 108 45 196617 set buf1;#P message 255 52 42 196617 replace;#P newex 253 73 81 196617 buffer~ buf1 10;#P comment 147 57 100 196617 channel sel 0/1;#P newex 168 197 35 196617 vasp.!;#P connect 16 0 34 0;#P connect 35 0 34 0;#P connect 34 0 15 0;#P connect 15 0 29 0;#P connect 29 0 18 0;#P hidden connect 5 2 34 1;#P connect 18 1 52 0;#P connect 52 0 25 0;#P connect 25 0 26 0;#P connect 26 0 23 0;#P connect 23 0 24 0;#P fasten 37 0 50 0 93 258 61 258;#P connect 50 0 27 0;#P hidden connect 28 0 29 1;#P hidden connect 5 3 34 2;#P connect 27 0 45 0;#P connect 45 0 18 1;#P connect 6 0 7 0;#P fasten 49 0 52 1 110 409 83 409;#P connect 31 0 6 0;#P connect 9 0 6 0;#P connect 8 0 6 0;#P connect 14 0 6 0;#P hidden fasten 28 0 27 1 135 332 89 332;#P fasten 49 0 45 1 110 359 90 359;#P connect 15 0 36 0;#P connect 36 0 37 0;#P fasten 44 0 25 1 154 423 102 423;#P connect 37 1 49 0;#P connect 32 1 31 0;#P connect 40 0 33 0;#P connect 16 0 33 0;#P connect 33 0 17 0;#P connect 17 0 30 0;#P fasten 37 0 43 0 93 258 126 258 126 219 154 219;#P connect 43 0 44 0;#P hidden connect 11 2 33 1;#P fasten 49 0 44 1 110 300 169 300;#P connect 30 0 0 0;#P connect 0 0 43 1;#P hidden connect 28 0 30 1;#P hidden connect 11 3 33 2;#P connect 3 0 2 0;#P hidden connect 51 0 21 0;#P hidden connect 19 1 21 0;#P connect 21 0 22 0;#P hidden connect 51 0 4 0;#P hidden connect 2 1 4 0;#P connect 4 0 5 0;#P hidden connect 12 1 10 0;#P hidden connect 51 0 10 0;#P connect 10 0 11 0;#P connect 13 0 12 0;#P connect 46 0 19 0;#P connect 20 0 19 0;#P connect 5 2 38 0;#P connect 11 2 41 0;#P connect 5 3 39 0;#P connect 11 3 42 0;#P connect 48 0 5 4;#P connect 47 0 11 4;#P pop;
