@@ -1,12 +1,13 @@
-#N canvas 0 0 454 304 12;
-#X obj 51 22 inlet;
-#X obj 118 265 outlet;
-#X obj 87 135 vasp.sum?;
-#X obj 51 55 vasp.radio;
-#X obj 186 135 vasp.f?;
-#X obj 167 208 /;
-#X obj 117 168 route 0;
-#X obj 87 87 vasp.m;
+#N canvas 0 0 456 349 12;
+#X obj 31 52 inlet;
+#X obj 98 295 outlet;
+#X obj 67 165 vasp.sum?;
+#X obj 31 85 vasp.radio;
+#X obj 166 165 vasp.f?;
+#X obj 147 238 /;
+#X obj 97 198 route 0;
+#X obj 67 117 vasp.m;
+#X text 27 8 calculate mean value of the values in a vasp;
 #X connect 0 0 3 0;
 #X connect 2 1 6 0;
 #X connect 3 0 2 0;
