@@ -1,13 +1,14 @@
-#N canvas 270 238 445 419 12;
-#X obj 42 81 vasp.!;
-#X obj 42 126 vasp.sqr;
-#X obj 43 215 sqrt;
-#X obj 42 26 inlet;
-#X obj 42 293 outlet;
-#X text 105 82 make temporary buffer;
-#X text 99 295 RMS;
-#X obj 42 164 vasp.qmean;
-#X text 132 166 mean value;
+#N canvas 270 238 447 421 12;
+#X obj 35 118 vasp.!;
+#X obj 35 163 vasp.sqr;
+#X obj 36 252 sqrt;
+#X obj 35 63 inlet;
+#X obj 35 330 outlet;
+#X text 98 119 make temporary buffer;
+#X text 92 332 RMS;
+#X obj 35 201 vasp.qmean;
+#X text 125 203 mean value;
+#X text 32 12 calculate RMS value of a vasp;
 #X connect 0 0 1 0;
 #X connect 1 0 7 0;
 #X connect 2 0 4 0;
